--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 
 # Editor directories and files
+/public/firebase/firebase.config.js
 .vscode/*
 !.vscode/extensions.json
 .idea
